Fixed bug in displaying the diagram block on mobile devices - step 2

--- a/static/messages.css
+++ b/static/messages.css
@@ -1639,8 +1639,8 @@ dialog::backdrop {
 
   #diagramDlg {
     width: 96dvh;
-    height: 90dvw;
-    max-height: 90dvw !important;
+    height: 89dvw;
+    max-height: 89dvw !important;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -1663,7 +1663,7 @@ dialog::backdrop {
     max-width: 100%;
     min-width: 0;
     min-height: 0;
-    max-height: calc(100% - 70px);
+    max-height: calc(100% - 75px);
     /* Leave room for button */
     flex: 1;
     margin-bottom: 4px;
